2008-12-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/flash_am29xxxxx_v2.cdl: Doh, fix doc link properly.

2008-11-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/flash_am29xxxxx_v2.cdl: Fix doc link.

2008-09-24  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx_aux.c (am29_hw_program): fix handling of parallel
	chips. Get the debug diagnostics to build cleanly.

2008-05-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/am29xxxxx_aux.c (am29_hw_query): Allow devices to return
	device IDs of larger than a byte.

2007-07-08  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx.c, src/am29xxxxx_aux.c: add 2ram entry and exit
	hooks to give HALs some extra control over the low-level flash
	operations.

2007-06-21  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx_aux.c: issue a memory barrier after every command
	that gets sent to the flash, to avoid problems with pipelines that
	mess about with write ordering.

2007-05-31  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx.c: skip data cache manipulation on architectures
	which do not have a data cache.

2007-05-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/flash_am29xxxxx_v2.cdl
	(CYGHWR_DEVS_FLASH_AMD_AM29XXXXX_V2_RESET_NEEDS_RESUME): New option.
	Allow Flash devices to indicate that they should be sent a "resume"
	command on startup.
	* src/am29xxxxx_aux.c (am29_hw_force_all_suspended_resume): New
	function to implement above CDL.
	(cyg_am29xxxxx_init_check_dev): Call the new function.
	(cyg_am29xxxxx_init_cfi): Ditto.
	(am29_hw_cfi): manufacturer_id and vendor private areas need only
	lowest byte taken, to handle multiple parallel devices.

2007-03-29  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx_aux.c (am29_hw_erase): use DQ7 to detect
	termination instead of DQ6. This avoids hardware problems where
	the toggling of DQ6 is not detected.

2007-03-05  Nick Garnett  <nickg@ecoscentric.com>

	* src/am29xxxxx_aux.c (am29_hw_cfi): Added missing AM29_SWAP() to